[package]
name = "projgeom-rs"
version = "0.1.0"
edition = "2021"
description = "Projective Geometry in Rust"
repository = "https://github.com/luk036/projgeom-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = { version = "0.1.45" }
num-traits = { version = "0.2.17" }
# fraction = { version = "0.1.1" }
# fractions-rs = { git = "https://github.com/luk036/fractions-rs" }
fractions-rs = { version = "0.1.1" }


[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
