[package]
name = "projgeom-rs"
version = "0.1.1"
edition = "2021"
description = "Projective Geometry in Rust"
repository = "https://github.com/luk036/projgeom-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = { version = "0.1.46" }
num-traits = { version = "0.2.19" }
# fraction = { version = "0.1.1" }
# fractions-rs = { git = "https://github.com/luk036/fractions-rs" }
fractions-rs = { version = "0.1.2" }
svgbobdoc = { version = "0.3", features = ["enable"] }


[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
