[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projgeom-py"
version = "0.1.3"
description = "Projective Geometry in Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Converted from Rust", email = "converted@example.com"}
]
keywords = ["geometry", "projective", "mathematics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-quickcheck>=0.9.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.287",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore specific type checking issues for complex geometric types
[[tool.mypy.overrides]]
module = "projgeom.pg_plane"
disable_error_code = ["arg-type", "attr-defined", "valid-type", "no-any-return", "var-annotated", "type-var", "list-item", "return-value"]

[[tool.mypy.overrides]]
module = "projgeom.pg_object"
disable_error_code = ["arg-type", "attr-defined", "valid-type", "no-any-return", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "projgeom.ck_plane"
disable_error_code = ["arg-type", "attr-defined", "valid-type", "no-any-return", "var-annotated", "type-var", "list-item", "return-value"]

[[tool.mypy.overrides]]
module = "projgeom.ell_object"
disable_error_code = ["arg-type", "attr-defined", "valid-type", "no-any-return"]

[[tool.mypy.overrides]]
module = "projgeom.euclid_object"
disable_error_code = ["arg-type", "attr-defined", "valid-type", "no-any-return", "var-annotated", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "projgeom.hyp_object"
disable_error_code = ["arg-type", "attr-defined", "valid-type", "no-any-return"]

[[tool.mypy.overrides]]
module = "projgeom.myck_object"
disable_error_code = ["arg-type", "attr-defined", "valid-type", "no-any-return"]

[[tool.mypy.overrides]]
module = "projgeom.persp_object"
disable_error_code = ["arg-type", "attr-defined", "valid-type", "no-any-return", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["valid-type", "attr-defined"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "S101", "E741", "PLR2004", "ARG001", "COM812", "BLE001", "TRY300", "SIM115", "PTH118", "PTH120", "PTH123", "S102", "E402", "F821", "ISC001"]
